--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2"
+  },
+  "dependencies": {
+    "@foobar404/wave": "^1.2.7"
   }
 }
